--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0",
     "sharp": "^0.32.1",
+    "socket.io": "^4.7.0",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
